welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:3: error: Invalid literal number
	for(i<-0to 2){
               ^MethodsPicture:10: error: ')' expected but '}' found.
}
^