welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
var i = 0;
	for(i<-0to 2){
	Schema();
	avance();avance();avance();avance();avance();
	}
	gauche();
	avance();avance();avance();avance();avance();
	droite();
}


def faireV(c:Color){
		setCouleurBrosse(c);
		avance();
		baisseBrosse();
		leveBrosse();
		avance();gauche();avance();
		baisseBrosse();
		leveBrosse();
		recule();droite();avance();
		baisseBrosse();
		leveBrosse();
		avance();gauche();
	}
def Schema(){
		faireV(java.awt.Color.yellow);
		faireV(java.awt.Color.red);
		faireV(java.awt.Color.blue);
		faireV(java.awt.Color.green);
			
		
}
